k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
